fixed issues with z-index navigation

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,6 @@ body {
     background-color: rgb(251, 174, 23);
     overflow-x: hidden;
 }
-body.subpage {
-  background-color: rgb(255, 206, 0);
-  background
-}
 
 li {
     list-style-type: none;
@@ -80,7 +76,7 @@ nav {
    position: relative;
    top: 50px;
    left: 50px;
-   z-index: 1;
+   z-index: 999;
    -webkit-user-select: none;
    user-select: none;
  }
@@ -165,6 +161,7 @@ nav {
    transform: translate(-110%, 0);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
    border-top: 2px solid black;
+   /* z-index: 9999; */
  }
 
  #menu-alternative-color {
@@ -240,8 +237,8 @@ PAGE: MEESTERWERKEN
 .sticky {
   position: sticky;
   top: 0;
-  background-color: rgb(255, 206, 0);
-  z-index: 999;
+  background-color: #FBAE17;
+  z-index: 9;
 }
 
 #patatoeeaters {
